--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <button class="navbar-toggler pull-right" id="toggle-btn" type="button" data-toggle="collapse"
-        data-target="#list-div" aria-controls="list-div" aria-expanded="false" aria-label="Toggle navigation">
+        data-target="#list-div" aria-controls="list-div" aria-expanded="false" aria-label="Toggle navigation">Menu&nbsp;
         <span class="glyphicon glyphicon-chevron-down" id="downicon"></span>
       </button>
       <ul class="nav navbar-nav navbar-right collapse" id="list-div">
